# quickstarts

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Directory.Build.props  Links.docx  README.md  docker.mk  go.work  go.work.sum  makefile  validate.mk
.devcontainer/: Dockerfile  dapr-setup.sh  devcontainer.json  docker-compose.yml  first-run-notice.txt
.github/: CONTRIBUTING.md  holopin.yml  pull_request_template.md
1.hello-world/: README.md  app.js  app.py  sample.http
10.hello-docker-compose/: README.md  docker-compose.yml
11.hello-dapr-slim/: README.md  app.js  sample.http
2.hello-kubernetes/: README.md  makefile
3.distributed-calculator/: README.md  makefile
4.pub-sub/: README.md  makefile
5.bindings/: README.md  docker-compose-single-kafka.yml  k8s_kafka_testclient.yaml  kafka-non-persistence.yaml  makefile
6.functions-and-keda/: README.md  setup.ps1
7.1.middleware/: README.md
7.middleware/: README.md
7b.middleware-clientcredentials/: README.md
8.observability/: README.md  makefile
9.extension/: .gitignore  Dockerfile  README.md  go.mod  go.sum  makefile
9.hello-docker-compose/: README.md  docker-compose.yml
9.secretstore/: README.md  makefile
bindings/: Commands  README.md  docker-compose-single-kafka.yml  docker-compose.yml  (+3 more)
pub_sub/python/sdk/: README.md  dapr.yaml  makefile  pyproject.toml
pub_sub/python/sdk/checkout/: app.py  requirements.txt
pub_sub/python/sdk/order-processor/: app.py  requirements.txt
pub_sub/python/sdk/order-processor-fastapi/: app.py  requirements.txt
pub_sub/python/sdk/shipper/: go.mod  go.sum  main.go
(+1624 files in other folders)
