[project]
name = "sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.4.0",
    "cloudevents>=1.12.0",
    "dapr>=1.15.0",
    "dapr-ext-fastapi>=1.15.0",
    "fastapi>=0.115.13",
    "flask>=3.1.1",
    "typing-extensions>=4.14.0",
    "uvicorn>=0.34.3",
]
